--- a/forged/templates/404.tmpl
+++ b/forged/templates/404.tmpl
@@ -11,9 +11,11 @@
 	</head>
 	<body class="404">
 		{{- template "header" . -}}
-		<div class="padding-wrapper complete-error-page">
-			<h1>404 Not Found</h1>
-		</div>
+		<main>
+			<div class="padding-wrapper complete-error-page">
+				<h1>404 Not Found</h1>
+			</div>
+		</main>
 		<footer>
 			{{- template "footer" . -}}
 		</footer>
