--- a/forged/templates/500.tmpl
+++ b/forged/templates/500.tmpl
@@ -11,10 +11,12 @@
 	</head>
 	<body class="500">
 		{{- template "header" . -}}
-		<div class="padding-wrapper complete-error-page">
-			<h1>500 Internal Server Error</h1>
-			<p>{{- .complete_error_msg -}}</p>
-		</div>
+		<main>
+			<div class="padding-wrapper complete-error-page">
+				<h1>500 Internal Server Error</h1>
+				<p>{{- .complete_error_msg -}}</p>
+			</div>
+		</main>
 		<footer>
 			{{- template "footer" . -}}
 		</footer>
