--- a/forged/templates/group.tmpl
+++ b/forged/templates/group.tmpl
@@ -12,66 +12,68 @@
 	</head>
 	<body class="group">
 		{{- template "header" . -}}
-		<div class="padding-wrapper">
-			{{- if .description -}}
-			<p>{{- .description -}}</p>
-			{{- end -}}
-			{{- template "group_view" . -}}
-		</div>
-		{{- if .direct_access -}}
+		<main>
 			<div class="padding-wrapper">
-				<form method="POST" enctype="application/x-www-form-urlencoded">
-					<table>
-						<thead>
-							<tr>
-								<th class="title-row" colspan="2">
-									Create repo
-								</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">Name</th>
-								<td class="tdinput">
-									<input id="repo-name-input" name="repo_name" type="text" />
-								</td>
-							</tr>
-							<tr>
-								<th scope="row">Description</th>
-								<td class="tdinput">
-									<input id="repo-desc-input" name="repo_desc" type="text" />
-								</td>
-							</tr>
-							<tr>
-								<th scope="row">Contrib</th>
-								<td class="tdinput">
-									<select id="repo-contrib-input" name="repo_contrib">
-										<option value="public">Public</option>
-										<option value="ssh_pubkey">SSH public key</option>
-										<option value="federated">Federated service</option>
-										<option value="registered_user">Registered user</option>
-										<option value="closed">Closed</option>
-									</select>
-								</td>
-							</tr>
-						</tbody>
-						<tfoot>
-							<tr>
-								<td class="th-like" colspan="2">
-									<div class="flex-justify">
-										<div class="left">
-										</div>
-										<div class="right">
-											<input class="btn-primary" type="submit" value="Create" />
-										</div>
-									</div>
-								</td>
-							</tr>
-						</tfoot>
-					</table>
-				</form>
+				{{- if .description -}}
+				<p>{{- .description -}}</p>
+				{{- end -}}
+				{{- template "group_view" . -}}
 			</div>
-		{{- end -}}
+			{{- if .direct_access -}}
+				<div class="padding-wrapper">
+					<form method="POST" enctype="application/x-www-form-urlencoded">
+						<table>
+							<thead>
+								<tr>
+									<th class="title-row" colspan="2">
+										Create repo
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<th scope="row">Name</th>
+									<td class="tdinput">
+										<input id="repo-name-input" name="repo_name" type="text" />
+									</td>
+								</tr>
+								<tr>
+									<th scope="row">Description</th>
+									<td class="tdinput">
+										<input id="repo-desc-input" name="repo_desc" type="text" />
+									</td>
+								</tr>
+								<tr>
+									<th scope="row">Contrib</th>
+									<td class="tdinput">
+										<select id="repo-contrib-input" name="repo_contrib">
+											<option value="public">Public</option>
+											<option value="ssh_pubkey">SSH public key</option>
+											<option value="federated">Federated service</option>
+											<option value="registered_user">Registered user</option>
+											<option value="closed">Closed</option>
+										</select>
+									</td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td class="th-like" colspan="2">
+										<div class="flex-justify">
+											<div class="left">
+											</div>
+											<div class="right">
+												<input class="btn-primary" type="submit" value="Create" />
+											</div>
+										</div>
+									</td>
+								</tr>
+							</tfoot>
+						</table>
+					</form>
+				</div>
+			{{- end -}}
+		</main>
 		<footer>
 			{{- template "footer" . -}}
 		</footer>
