--- a/forged/templates/login.tmpl
+++ b/forged/templates/login.tmpl
@@ -10,47 +10,49 @@
 		<title>Login &ndash; {{ .global.forge_title -}}</title>
 	</head>
 	<body class="index">
-		{{- .login_error -}}
-		<div class="padding-wrapper">
-				<form method="POST" enctype="application/x-www-form-urlencoded">
-					<table>
-						<thead>
-							<tr>
-								<th class="title-row" colspan="2">
-									Password authentication
-								</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">Username</th>
-								<td class="tdinput">
-									<input id="usernameinput" name="username" type="text" />
-								</td>
-							</tr>
-							<tr>
-								<th scope="row">Password</th>
-								<td class="tdinput">
-									<input id="passwordinput" name="password" type="password" />
-								</td>
-							</tr>
-						</tbody>
-						<tfoot>
-							<tr>
-								<td class="th-like" colspan="2">
-									<div class="flex-justify">
-										<div class="left">
+		<main>
+			{{- .login_error -}}
+			<div class="padding-wrapper">
+					<form method="POST" enctype="application/x-www-form-urlencoded">
+						<table>
+							<thead>
+								<tr>
+									<th class="title-row" colspan="2">
+										Password authentication
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<th scope="row">Username</th>
+									<td class="tdinput">
+										<input id="usernameinput" name="username" type="text" />
+									</td>
+								</tr>
+								<tr>
+									<th scope="row">Password</th>
+									<td class="tdinput">
+										<input id="passwordinput" name="password" type="password" />
+									</td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td class="th-like" colspan="2">
+										<div class="flex-justify">
+											<div class="left">
+											</div>
+											<div class="right">
+												<input class="btn-primary" type="submit" value="Submit" />
+											</div>
 										</div>
-										<div class="right">
-											<input class="btn-primary" type="submit" value="Submit" />
-										</div>
-									</div>
-								</td>
-							</tr>
-						</tfoot>
-					</table>
-				</form>
-		</div>
+									</td>
+								</tr>
+							</tfoot>
+						</table>
+					</form>
+			</div>
+		</main>
 		<footer>
 			{{- template "footer" . -}}
 		</footer>
