--- a/forged/templates/repo_branches.tmpl
+++ b/forged/templates/repo_branches.tmpl
@@ -12,60 +12,65 @@
 	</head>
 	<body class="repo-branches">
 		{{- template "header" . -}}
-		<div class="repo-header">
-			<h2>{{- .repo_name -}}</h2>
-			<ul class="nav-tabs-standalone">
-				<li class="nav-item">
-					<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="../branches/">Branches</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../tags/">Tags</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../contrib/">Merge requests</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="../settings/">Settings</a>
-				</li>
-			</ul>
-		</div>
-		<div class="repo-header-extension">
-			<div class="repo-header-extension-content">
-				{{- .repo_description -}}
+		<main>
+			<div class="repo-header">
+				<h2>{{- .repo_name -}}</h2>
+				<ul class="nav-tabs-standalone">
+					<li class="nav-item">
+						<a class="nav-link" href="../{{- template "ref_query" $root -}}">Summary</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../tree/{{- template "ref_query" $root -}}">Tree</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../log/{{- template "ref_query" $root -}}">Log</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="../branches/">Branches</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../tags/">Tags</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../contrib/">Merge requests</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../settings/">Settings</a>
+					</li>
+				</ul>
 			</div>
-		</div>
-		<div class="padding-wrapper">
-			<p>
-			<strong>
-			Warning: Due to various recent migrations, viewing non-HEAD refs may be broken.
-			</strong>
-			</p>
-			<table id="branches">
-				<thead>
-					<tr class="title-row">
-						<th colspan="1">Branches</th>
-					</tr>
-				</thead>
-				<tbody>
-					{{- range .branches -}}
-					<tr>
-						<td>
-							<a href="../?branch={{ . }}">{{ . }}</a>
-						</td>
-					</tr>
-					{{- end -}}
-				</tbody>
-			</table>
-		</div>
+			<div class="repo-header-extension">
+				<div class="repo-header-extension-content">
+					{{- .repo_description -}}
+				</div>
+			</div>
+			<div class="padding-wrapper">
+				<p>
+				<strong>
+				Warning: Due to various recent migrations, viewing non-HEAD refs may be broken.
+				</strong>
+				</p>
+				<table id="branches">
+					<thead>
+						<tr class="title-row">
+							<th colspan="1">Branches</th>
+						</tr>
+					</thead>
+					<tbody>
+						{{- range .branches -}}
+						<tr>
+							<td>
+								<a href="../?branch={{ . }}">{{ . }}</a>
+							</td>
+						</tr>
+						{{- end -}}
+					</tbody>
+				</table>
+			</div>
+		</main>
+		<footer>
+			{{- template "footer" . -}}
+		</footer>
 	</body>
 </html>
 {{- end -}}
