--- a/forged/templates/repo_tree_file.tmpl
+++ b/forged/templates/repo_tree_file.tmpl
@@ -13,50 +13,52 @@
 	</head>
 	<body class="repo-tree-file">
 		{{- template "header" . -}}
-		<div class="repo-header">
-			<h2>{{- .repo_name -}}</h2>
-			<ul class="nav-tabs-standalone">
-				<li class="nav-item">
-					<a class="nav-link" href="{{- .repo_url_root -}}{{- template "ref_query" $root -}}">Summary</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="{{- .repo_url_root -}}tree/{{- template "ref_query" $root -}}">Tree</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{- .repo_url_root -}}log/{{- template "ref_query" $root -}}">Log</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{- .repo_url_root -}}branches/">Branches</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{- .repo_url_root -}}tags/">Tags</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{- .repo_url_root -}}contrib/">Merge requests</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{- .repo_url_root -}}settings/">Settings</a>
-				</li>
-			</ul>
-		</div>
-		<div class="repo-header-extension">
-			<div class="repo-header-extension-content">
-				{{- .repo_description -}}
+		<main>
+			<div class="repo-header">
+				<h2>{{- .repo_name -}}</h2>
+				<ul class="nav-tabs-standalone">
+					<li class="nav-item">
+						<a class="nav-link" href="{{- .repo_url_root -}}{{- template "ref_query" $root -}}">Summary</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="{{- .repo_url_root -}}tree/{{- template "ref_query" $root -}}">Tree</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{- .repo_url_root -}}log/{{- template "ref_query" $root -}}">Log</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{- .repo_url_root -}}branches/">Branches</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{- .repo_url_root -}}tags/">Tags</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{- .repo_url_root -}}contrib/">Merge requests</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{- .repo_url_root -}}settings/">Settings</a>
+					</li>
+				</ul>
 			</div>
-		</div>
-		<div class="padding">
-			{{- if .ref_name -}}
-			<p>
-			<strong>
-			Warning: Due to various recent migrations, viewing non-HEAD refs may be broken.
-			</strong>
-			</p>
-			{{- end -}}
-			<p>
-				/{{ .path_spec }} (<a href="/{{ template "group_path_plain" .group_path }}/-/repos/{{ .repo_name }}/raw/{{ .path_spec }}{{- template "ref_query" $root -}}">raw</a>)
-			</p>
-			{{- .file_contents -}}
-		</div>
+			<div class="repo-header-extension">
+				<div class="repo-header-extension-content">
+					{{- .repo_description -}}
+				</div>
+			</div>
+			<div class="padding">
+				{{- if .ref_name -}}
+				<p>
+				<strong>
+				Warning: Due to various recent migrations, viewing non-HEAD refs may be broken.
+				</strong>
+				</p>
+				{{- end -}}
+				<p>
+					/{{ .path_spec }} (<a href="/{{ template "group_path_plain" .group_path }}/-/repos/{{ .repo_name }}/raw/{{ .path_spec }}{{- template "ref_query" $root -}}">raw</a>)
+				</p>
+				{{- .file_contents -}}
+			</div>
+		</main>
 		<footer>
 			{{- template "footer" . -}}
 		</footer>
